--- a/jan4th.html
+++ b/jan4th.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>This week of January 4th, 2024</h1>
+            <h1>January 4th, 2024</h1>
         </header>
     </body>
     <main>
