Update and rename jan4th.html to 1st-blog.html

--- a/1st-blog.html
+++ b/1st-blog.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <header>
-            <h1>January 4th, 2024</h1>
+            <h1>First Blog<h1>
+            <h2>January 4th, 2024</h2>
         </header>
     </body>
     <main>
