--- a/tech.html
+++ b/tech.html
@@ -20,7 +20,7 @@
             </article>
             <nav>
                 <ul>
-                    <li><a href="jan4th.html">Jan, 4th</a></li>
+                    <li><a href="1st-blog.html">First Blog</a></li>
                 </ul>
             </nav>
         </main>
