--- a/1st-blog.html
+++ b/1st-blog.html
@@ -5,7 +5,7 @@
         <meta name="viewpoint" 
         content="width=device-width, 
         initial-scale-1.0">
-        <title>Jan, 4th</title>
+        <title>First Blog</title>
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
