--- a/1st-blog.html
+++ b/1st-blog.html
@@ -2,18 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewpoint" 
+        <meta name="viewport" 
         content="width=device-width, 
-        initial-scale-1.0">
+        initial-scale=1.0">
         <title>First Blog</title>
         <link rel="stylesheet" href="style2.css">
     </head>
     <body>
         <header>
-            <h1>First Blog<h1>
+            <h1>First Blog</h1>
             <h2>January 5th, 2024</h2>
         </header>
-    </body>
+
     <main>
         <p>Hello, fellow bipeds.<br>So today I published my first website. I did this with the intention of becoming familiar with web development and what 
             better way than by doing. I stuck with some basic HTML and CSS. My thoughs are that I am going to type out a new article 
@@ -23,4 +23,5 @@
             progress on this journey for whoever wants to follow along.
         </p>
     </main>
+     </body>
 </html>
