--- a/books.html
+++ b/books.html
@@ -16,6 +16,11 @@
                 <p>Here we have links to book reviews and 
                     opinions that I have written.</p>
             </article>
+            <nav>
+                <ul>
+                    <li><a href="7gables.html">House of the Seven Gables</a></li>
+                </ul>
+            </nav>
         </main>
     </body>
 </html>
