--- a/books.html
+++ b/books.html
@@ -13,7 +13,7 @@
 
         <main>
             <article>
-                <p>Here we have links to book reviews and 
+                <p>Here we have links to reviews and 
                     opinions that I have written.</p>
             </article>
             <nav>
