--- a/7gables.html
+++ b/7gables.html
@@ -7,8 +7,10 @@
       <link rel="stylesheet" href="style2.css">
     </head>
     <body>
-      <h1>House of the Seven Gables</h1>
-      <h2>by Nathaniel Hawthorne</h2>
+      <header>
+        <h1>House of the Seven Gables</h1>
+        <h2>by Nathaniel Hawthorne</h2>
+      </header>
     </body>
     <main>
       <article>
