--- a/7gables.html
+++ b/7gables.html
@@ -14,11 +14,14 @@
     </body>
     <main>
       <article>
+        <p>I will give a brief description of the book and the author here.</p>
+        <p>***</p>
+          <br>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
         I have had several years experience being around gardens and chickens, so I am very familiar with this kind of setting. 
         Hawthorne's description of the tiniest details and his ability to draw out the most nestalgic parts were 
         absolutely incredible. It was like he was able to distill the essence of these experiences and give the reader 
-        the joy of this world.<br>For someone who has never experienced these things or have had bad or limited experiences, this 
+        the joy of this world.<br>For someone who has never experienced these things or has had bad or limited experiences, this 
         is the perfect way to enter the soul of someone who truly finds peace in these things.</p>
       </article>
     </main>
