--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <nav>
       <ul>
         <li><a href=tech.html>Tech Ramblings</a></li>
+        <li><a href=musing.html>Random Musing</a></li>
         <li><a href=books.html>Book Ramblings</a></li>
       </ul>
     </nav>
