--- a/books.html
+++ b/books.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <title>Book Ramblings</title>
+        <title>Book Reviews</title>
         <link rel="stylesheet" href="style3.css">
     </head>
     <body>
         <header>
-            <h1>Book Ramblings</h1>
+            <h1>Book Reviews</h1>
         </header>
 
         <main>
