--- a/7gables.html
+++ b/7gables.html
@@ -23,5 +23,6 @@
         the joy of this world.<br>For someone who has never experienced these things or has had bad or limited experiences, this 
         is the perfect way to enter the soul of someone who truly finds peace in these things.</p>
       </article>
+      <img src="DALLE-garden.png" alt="The garden and chickens" width="128" height="128">
     </main>
   </html>
