--- a/7gables.html
+++ b/7gables.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>House of the Seven Gables</title>
-      <link rel="stylesheet" href="style2.css">
+      <link rel="stylesheet" href="style7gables.css">
     </head>
     <body>
       <header>
