--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </article>
     <nav>
       <ul>
-        <li><a href=tech.html>Tech Ramblings</a></li>
-        <li><a href=musings.html>Random Musings</a></li>
-        <li><a href=books.html>Book Ramblings</a></li>
+        <li><a href=tech.html>Tech</a></li>
+        <li><a href=musings.html>Musings</a></li>
+        <li><a href=books.html>Books</a></li>
       </ul>
     </nav>
   </main>
