--- a/7gables.html
+++ b/7gables.html
@@ -16,6 +16,7 @@
       <article>
         <p>I will give a brief description of the book and the author here.</p>
         <p>***</p>
+        <p>Chapter 10<br>The Pyncheon Garden<p>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
         I have had several years experience being around gardens and chickens, so I am very familiar with this kind of setting. 
         Hawthorne's description of the tiniest details and his ability to draw out the most nestalgic parts were 
@@ -24,5 +25,6 @@
         is the perfect way to enter the soul of someone who truly finds peace in these things.</p>
       </article>
       <img src="DALLE-garden.png" alt="The garden and chickens" width="128" height="128">
+      <p>Clifford and Phoebe in the garden with the chickens</p>
     </main>
   </html>
