--- a/7gables.html
+++ b/7gables.html
@@ -14,7 +14,16 @@
     </body>
     <main>
       <article>
-        <p>I will give a brief description of the book and the author here.</p>
+        <p>Published in 1851, The House of the Seven Gables </p>
+        <p>Published works<br>
+Fanshawe (1828)<br>
+Twice-Told Tales (1837)<br>
+The Scarlet Letter (1850)<br>
+The House of the Seven Gables (1851)<br>
+The Blithedale Romance (1852)<br>
+The Marble Faun (1860)<br>
+Septimius Felton; or, the Elixir of Life (1872)<br>
+Doctor Grimshawe's Secret: A Romance (1883)<p>
         <p>***</p>
         <p>Chapter 10<br>The Pyncheon Garden<p>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
