--- a/7gables.html
+++ b/7gables.html
@@ -36,4 +36,9 @@ Doctor Grimshawe's Secret: A Romance (1883)<p>
       <img src="DALLE-garden.png" alt="The garden and chickens" width="128" height="128">
       <p>Clifford and Phoebe in the garden with the chickens</p>
     </main>
+    <footer>
+    <p><sup id="note1">1</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
+      <a href="https://isfdb.org/cgi-bin/ch.cgi?1959">https://isfdb.org/cgi-bin/ch.cgi?1959</a>.</p>
+</footer>
+
   </html>
