--- a/7gables.html
+++ b/7gables.html
@@ -24,6 +24,7 @@ The Blithedale Romance (1852)<br>
 The Marble Faun (1860)<br>
 Septimius Felton; or, the Elixir of Life (1872)<br>
 Doctor Grimshawe's Secret: A Romance (1883)<p>
+        <sup id="ref1"><a href="#note1">1</a></sup>
         <p>***</p>
         <p>Chapter 10<br>The Pyncheon Garden<p>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
