--- a/7gables.html
+++ b/7gables.html
@@ -15,7 +15,7 @@
     <main>
       <article>
         <p>Published in 1851, The House of the Seven Gables </p>
-        <p>Published works<br>
+        <p>Here is a non-exhaustive list of published works<br>
 Fanshawe (1828)<br>
 Twice-Told Tales (1837)<br>
 The Scarlet Letter (1850)<br>
@@ -23,7 +23,7 @@ The House of the Seven Gables (1851)<br>
 The Blithedale Romance (1852)<br>
 The Marble Faun (1860)<br>
 Septimius Felton; or, the Elixir of Life (1872)<br>
-Doctor Grimshawe's Secret: A Romance (1883)<sup id="ref1"><a href="#note1">1</a></sup><p>
+Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref1"><a href="#note1">1</a></sup><p>
         <p>***</p>
         <p>Chapter 10<br>The Pyncheon Garden<p>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
