--- a/7gables.html
+++ b/7gables.html
@@ -15,7 +15,7 @@
     <main>
       <article>
         <p>Published in 1851, The House of the Seven Gables </p>
-        <p>Here is a non-exhaustive list of published works<br>
+        <p><i>Here is a non-exhaustive list of published works</i><br>
 Fanshawe (1828)<br>
 Twice-Told Tales (1837)<br>
 The Scarlet Letter (1850)<br>
