--- a/7gables.html
+++ b/7gables.html
@@ -33,8 +33,10 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref1"><a href="#note1">1</a
         the joy of this world.<br>For someone who has never experienced these things or has had bad or limited experiences, this 
         is the perfect way to enter the soul of someone who truly finds peace in these things.</p>
       </article>
+      <figure>
       <img src="DALLE-garden.png" alt="The garden and chickens" width="128" height="128">
-      <p>Clifford and Phoebe in the garden with the chickens</p>
+      <figcaption>Clifford and Phoebe in the garden with the chickens</figcaption>
+      </figure>
     </main>
     <footer>
     <p><sup id="note1">1</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
