--- a/7gables.html
+++ b/7gables.html
@@ -35,12 +35,19 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref1"><a href="#note1">1</a
       </article>
       <figure>
       <img src="DALLE-garden.png" alt="The garden and chickens" width="400" height="400">
-      <figcaption>Clifford and Phoebe in the garden with the chickens</figcaption>
+      <figcaption>
+        Clifford and Phoebe in the garden with the chickens 
+        <sup id="ref2"><a href="#note2">2</a></sup>
+      </figcaption>
       </figure>
     </main>
     <footer>
     <p><sup id="note1">1</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
       <a href="https://isfdb.org/cgi-bin/ch.cgi?1959">https://isfdb.org/cgi-bin/ch.cgi?1959</a>.</p>
+
+      <p><sup id="note2">2</sup> Clifford and Phoebe in the Garden." AI-generated image, ChatGPT, OpenAI, [date of generation].</p>
+
+      
 </footer>
 
   </html>
