--- a/7gables.html
+++ b/7gables.html
@@ -44,10 +44,7 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref1"><a href="#note1">1</a
     <footer>
     <p><sup id="note1">1</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
       <a href="https://isfdb.org/cgi-bin/ch.cgi?1959">https://isfdb.org/cgi-bin/ch.cgi?1959</a>.</p>
-
-      <p><sup id="note2">2</sup> Clifford and Phoebe in the Garden." AI-generated image, ChatGPT, OpenAI, [date of generation].</p>
-
-      
-</footer>
+      <p><sup id="note2">2</sup> Clifford and Phoebe in the Garden." AI-generated image, ChatGPT, OpenAI, 01.11.2024.</p>      
+   </footer>
 
   </html>
