--- a/7gables.html
+++ b/7gables.html
@@ -14,6 +14,9 @@
     </body>
     <main>
       <article>
+        <part><b>Short Bio</b><br>
+          
+        </part>
         <p>Published in 1851, The House of the Seven Gables </p>
         <p><i>Here is a non-exhaustive list of published works</i><br>
 Fanshawe (1828)<br>
@@ -23,7 +26,7 @@ The House of the Seven Gables (1851)<br>
 The Blithedale Romance (1852)<br>
 The Marble Faun (1860)<br>
 Septimius Felton; or, the Elixir of Life (1872)<br>
-Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref1"><a href="#note1">1</a></sup><p>
+Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref101"><a href="#note101">1</a></sup><p>
         <p>***</p>
         <p>Chapter 10<br>The Pyncheon Garden<p>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
@@ -37,14 +40,14 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref1"><a href="#note1">1</a
       <img src="DALLE-garden.png" alt="The garden and chickens" width="400" height="400">
       <figcaption>
         Clifford and Phoebe in the garden with the chickens 
-        <sup id="ref2"><a href="#note2">2</a></sup>
+        <sup id="ref202"><a href="#note202">2</a></sup>
       </figcaption>
       </figure>
     </main>
     <footer>
-    <p><sup id="note1">1</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
+    <p><sup id="note101">101</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
       <a href="https://isfdb.org/cgi-bin/ch.cgi?1959">https://isfdb.org/cgi-bin/ch.cgi?1959</a>.</p>
-      <p><sup id="note2">2</sup> Clifford and Phoebe in the Garden." AI-generated image, ChatGPT, OpenAI, 01.11.2024.</p>      
+      <p><sup id="note202">202</sup> Clifford and Phoebe in the Garden." AI-generated image, ChatGPT, OpenAI, 01.11.2024.</p>      
    </footer>
 
   </html>
