--- a/7gables.html
+++ b/7gables.html
@@ -15,6 +15,9 @@
     <main>
       <article>
         <part><b>Short Bio</b><br>
+          Born: July 4th, 1804<br>
+          Died: May 19th, 1864<br>
+          Birthplace: Salem, Massachusetts
           
         </part>
         <p>Published in 1851, The House of the Seven Gables </p>
