--- a/7gables.html
+++ b/7gables.html
@@ -31,7 +31,7 @@ The Marble Faun (1860)<br>
 Septimius Felton; or, the Elixir of Life (1872)<br>
 Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref101"><a href="#note101">1</a></sup><p>
         <p>***</p>
-        <p>Chapter 10<br>The Pyncheon Garden<p>
+        <p><b>Chapter 10</b><br>The Pyncheon Garden<p>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
         I have had several years experience being around gardens and chickens, so I am very familiar with this kind of setting. 
         Hawthorne's description of the tiniest details and his ability to draw out the most nestalgic parts were 
