--- a/books.html
+++ b/books.html
@@ -13,12 +13,15 @@
 
         <main>
             <article>
-                <p>Here we have links to reviews and 
-                    opinions that I have written.</p>
+                <p>These links go to article that I have written. They are short decsriptions of my 
+                    opions about the books. I also have supplied information that I thought was interesting.<br>
+                    This was not meant to be an exhaustive work made for academic use. It is merely information and 
+                    thoughts that I personally found interesting about the works.
+                </p>
             </article>
             <nav>
                 <ul>
-                    <li><a href="7gables.html">House of the Seven Gables</a></li>
+                    <li><a href="7gables.html">The House of the Seven Gables</a></li>
                     <br>
                     <li><a href="gatsby.html">The Great Gatsby</a></li>
                 </ul>
