--- a/books.html
+++ b/books.html
@@ -14,8 +14,8 @@
         <main>
             <article>
                 <p>These links go to article that I have written. They are short decsriptions of my 
-                    opions about the books. I also have supplied information that I thought was interesting.<br>
-                    This was not meant to be an exhaustive work made for academic use. It is merely information and 
+                    opions about the books. I also have supplied information that I thought was interesting. 
+                    This was not meant to be an exhaustive site made for academic use. It is merely information and 
                     thoughts that I personally found interesting about the works.
                 </p>
             </article>
