--- a/books.html
+++ b/books.html
@@ -13,7 +13,7 @@
 
         <main>
             <article>
-                <p>These links go to article that I have written. They are short decsriptions of my 
+                <p>These links go to articles that I have written. They are short decsriptions of my 
                     opions about the books. I also have supplied information that I thought was interesting. 
                     This was not meant to be an exhaustive site made for academic use. It is merely information and 
                     thoughts that I personally found interesting about the works.
