--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,12 @@
     <meta charset=""UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <header>
         <h1>About Me</h1>
+        <color: white;
     <main>
         <p>I see the world a little different
             than many people do. While some argue
