--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,10 @@
     <header>
         <h1>About Me</h1>
         <color: white;
+    </header>
+    
     <main>
+        <article>
         <p>I see the world a little different
             than many people do. While some argue
             if the glass is half full or half empty,
@@ -19,7 +22,8 @@
             Sometimes a tiny piece of informaiton 
             can completely change a person's position.
         </p>
+    </article>
     </main>
-    </header>
+    
 </body>
 </html>
