--- a/aboutme.html
+++ b/aboutme.html
@@ -14,9 +14,9 @@
 
     <main>
         <article>
-        <p>I see the world a little different
+        <p>I see the world a little differently
             than many people do. While some argue
-            if the glass is half full or half empty,
+            whether the glass is half full or half empty,
             I am busy inspecting the glass to make
             sure it's not a half glass of piss!
             Sometimes a tiny piece of informaiton 
