--- a/tech.html
+++ b/tech.html
@@ -9,13 +9,12 @@
     </head>
     <body>
         <header>
-            <h1>Tech Ramblings</h1>
+            <h1>Technology</h1>
         </header>
         <main>
             <article>
-                <p>Here are the links to random technology
-                    articles that I have written. Paruse 
-                    them at your own risk.
+                <p>Here are the links to technology
+                    articles
                 </p>
             </article>
             <nav>
