--- a/musings.html
+++ b/musings.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content=
   "width=device-width, initial-scale=1.0">
-  <title>Random Musings</title>
+  <title>Musings</title>
   <link rel="stylesheet" href="style2.css">
 </head>
   <body>
     <header>
-      <h1>Random Musings</h1>
+      <h1>Musings</h1>
     </header>
   </body>
 </html>
