--- a/7gables.html
+++ b/7gables.html
@@ -14,12 +14,12 @@
     </body>
     <main>
       <article>
-        <part><b>Short Bio</b><br>
+        <p><b>Short Bio</b><br>
           Born: July 4th, 1804<br>
           Died: May 19th, 1864<br>
           Birthplace: Salem, Massachusetts
           
-        </part>
+        </p>
         <p>Published in 1851, The House of the Seven Gables </p>
         <p><i>Here is a non-exhaustive list of published works</i><br>
 Fanshawe (1828)<br>
