--- a/7gables.html
+++ b/7gables.html
@@ -17,7 +17,14 @@
         <p><b>Short Bio</b><br>
           Born: July 4th, 1804<br>
           Died: May 19th, 1864<br>
-          Birthplace: Salem, Massachusetts
+          Birthplace: Salem, Massachusetts<br><br>
+          Growing up in Salem, Hawthorne had a direct ancestor 
+          who had been a judge during the Salem witch trials 
+          in the town's history. Hawthorne himself mused whether 
+          the hardships of his family line since then were the 
+          result his ancestors actions. These plays along a similar 
+          theme with Pyncheon family curse in The House of the Seven 
+          Gables.<br>
           
         </p>
         <p>Published in 1851, The House of the Seven Gables </p>
