--- a/7gables.html
+++ b/7gables.html
@@ -22,10 +22,10 @@
           who had been a judge during the Salem witch trials 
           in the town's history. Hawthorne himself mused whether 
           the hardships of his family line since then were the 
-          result his ancestors actions. These plays along a similar 
-          theme with Pyncheon family curse in The House of the Seven 
-          Gables.<br>
-          
+          result his ancestors actions. One of the women sentenced 
+          to death by his ancestor had purportedly cursed Hawthorne 
+          family. This plays along a similar theme with Pyncheon 
+          family curse in The House of the Seven Gables.<br>
         </p>
         <p>Published in 1851, The House of the Seven Gables </p>
         <p><i>Here is a non-exhaustive list of published works</i><br>
