--- a/7gables.html
+++ b/7gables.html
@@ -26,6 +26,7 @@
           to death by his ancestor had purportedly cursed Hawthorne 
           family. This plays along a similar theme with Pyncheon 
           family curse in The House of the Seven Gables.<br>
+          <sup id="ref1"><a href="#note1">1</a></sup>
         </p>
         <p>Published in 1851, The House of the Seven Gables </p>
         <p><i>Here is a non-exhaustive list of published works</i><br>
