--- a/7gables.html
+++ b/7gables.html
@@ -22,10 +22,11 @@
           who had been a judge during the Salem witch trials 
           in the town's history. Hawthorne himself mused whether 
           the hardships of his family line since then were the 
-          result his ancestors actions. One of the women sentenced 
-          to death by his ancestor had purportedly cursed Hawthorne 
-          family. This plays along a similar theme with Pyncheon 
-          family curse in The House of the Seven Gables.<br>
+          result his ancestors actions. One of the women that 
+          had been sentenced to death by his ancestor had 
+          purportedly cursed the Hawthorne family. This plays 
+          along a similar theme with Pyncheon family curse 
+          in The House of the Seven Gables.
           <sup id="ref1"><a href="#note1">1</a></sup>
         </p>
         <p>Published in 1851, The House of the Seven Gables </p>
