--- a/7gables.html
+++ b/7gables.html
@@ -18,6 +18,10 @@
           Born: July 4th, 1804<br>
           Died: May 19th, 1864<br>
           Birthplace: Salem, Massachusetts<br><br>
+          Considered to be one the greatest American authors,
+          Nathaniel Hawthorne wrote several novels that remain 
+          popular even today. The Scarlet Letter and The House 
+          of the Seven Gables being just two examples.
           Growing up in Salem, Hawthorne had a direct ancestor 
           who had been a judge during the Salem witch trials 
           in the town's history. Hawthorne himself mused whether 
