--- a/7gables.html
+++ b/7gables.html
@@ -3,12 +3,12 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>House of the Seven Gables</title>
+      <title>The House of the Seven Gables</title>
       <link rel="stylesheet" href="style7gables.css">
     </head>
     <body>
       <header>
-        <h1>House of the Seven Gables</h1>
+        <h1>The House of the Seven Gables</h1>
         <h2>by Nathaniel Hawthorne</h2>
       </header>
     </body>
@@ -61,7 +61,9 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref101"><a href="#note101">
       </figure>
     </main>
     <footer>
-    <p><sup id="note101">101</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
+      <p>sup id="note1">1</p> "Nathaniel Hawthorne, American writer." Britannica. Accessed 01-11-2024.
+      <a href="https://www.britannica.com/topic/Arthur-Dimmesdale">https://www.britannica.com/topic/Arthur-Dimmesdale</a></p>
+      <p><sup id="note101">101</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
       <a href="https://isfdb.org/cgi-bin/ch.cgi?1959">https://isfdb.org/cgi-bin/ch.cgi?1959</a>.</p>
       <p><sup id="note202">202</sup> Clifford and Phoebe in the Garden." AI-generated image, ChatGPT, OpenAI, 01.11.2024.</p>      
    </footer>
