--- a/7gables.html
+++ b/7gables.html
@@ -61,7 +61,7 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref101"><a href="#note101">
       </figure>
     </main>
     <footer>
-      <p><sup id="note1">1</p> "Britannica,The Editors of Encyclopaedia."Arthur Dimmesdale." Accessed 01-11-2024.
+      <p><sup id="note1">1</sup> "Britannica,The Editors of Encyclopaedia."Arthur Dimmesdale." Accessed 01-11-2024.
       <a href="https://www.britannica.com/topic/Arthur-Dimmesdale">https://www.britannica.com/topic/Arthur-Dimmesdale</a></p>
       <p><sup id="note101">101</sup> "Chronological Bibliography of Nathaniel Hawthorne." ISFDB. Accessed 01-11-2024. 
       <a href="https://isfdb.org/cgi-bin/ch.cgi?1959">https://isfdb.org/cgi-bin/ch.cgi?1959</a>.</p>
