--- a/7gables.html
+++ b/7gables.html
@@ -33,7 +33,13 @@
           in The House of the Seven Gables.
           <sup id="ref1"><a href="#note1">1</a></sup>
         </p>
-        <p>Published in 1851, The House of the Seven Gables </p>
+        <p>Published in 1851, The House of the Seven Gables was modeled after a real house 
+          owned by Hawthorne's cousin. The actual house was built in 1668 just 24 years before 
+          the Salem witch trials. The history of the house being related to the trials and 
+          Hawthorne's own family's role in the event, has left the house as one of the most 
+          haunted locations in Salem.
+          <sup id="ref2"><a href="note2">2></a></sup>
+        </p>
         <p><i>Here is a non-exhaustive list of published works</i><br>
 Fanshawe (1828)<br>
 Twice-Told Tales (1837)<br>
