--- a/7gables.html
+++ b/7gables.html
@@ -37,8 +37,8 @@
           owned by Hawthorne's cousin. The actual house was built in 1668 just 24 years before 
           the Salem witch trials. The history of the house being related to the trials and 
           Hawthorne's own family's role in the event, has left the house as one of the most 
-          haunted locations in Salem.
-          <sup id="ref2"><a href="note2">2></a></sup>
+          haunted locations in Salem. The house is still standing today as a museum.
+          <sup id="ref2"><a href="note2">2</a></sup>
         </p>
         <p><i>Here is a non-exhaustive list of published works</i><br>
 Fanshawe (1828)<br>
