--- a/7gables.html
+++ b/7gables.html
@@ -40,7 +40,7 @@
           haunted locations in Salem. The house is still standing today as a museum.
           <sup id="ref2"><a href="note2">2</a></sup>
         </p>
-        <p><i>Here is a short list of his published works</i><br>
+        <p><i>Some of his published works</i><br>
 Fanshawe (1828)<br>
 Twice-Told Tales (1837)<br>
 The Scarlet Letter (1850)<br>
@@ -49,6 +49,10 @@ The Blithedale Romance (1852)<br>
 The Marble Faun (1860)<br>
 Septimius Felton; or, the Elixir of Life (1872)<br>
 Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref3"><a href="#note3">3</a></sup><p>
+        <p>For the book, I using the free, public domain ebook from Project Gutenburg. It is an excellent source for 
+          ebooks that have entered the public domain. LibriVox is another great source for public domain audiobooks.
+        </p>
+
         <p>***</p>
         <p><b>Chapter 10</b><br><i>The Pyncheon Garden</i><p>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
