--- a/7gables.html
+++ b/7gables.html
@@ -40,7 +40,7 @@
           haunted locations in Salem. The house is still standing today as a museum.
           <sup id="ref2"><a href="note2">2</a></sup>
         </p>
-        <p><i>Some of his published works</i><br>
+        <p><i><b>Other works by Hawthorne</b></i><br>
 Fanshawe (1828)<br>
 Twice-Told Tales (1837)<br>
 The Scarlet Letter (1850)<br>
@@ -49,8 +49,11 @@ The Blithedale Romance (1852)<br>
 The Marble Faun (1860)<br>
 Septimius Felton; or, the Elixir of Life (1872)<br>
 Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref3"><a href="#note3">3</a></sup><p>
-        <p>For the book, I using the free, public domain ebook from Project Gutenburg. It is an excellent source for 
-          ebooks that have entered the public domain. LibriVox is another great source for public domain audiobooks.
+        
+        <p><b>Material Source</b></p>
+        <p>For the book, I am using the free, public domain ebook from Project Gutenburg. It is an excellent source for 
+          ebooks that have entered the public domain. LibriVox is another great source for public domain audiobooks.<br>
+          I am also using Audible for when I am running or doing other tasks that prevent me from reading.
         </p>
 
         <p>***</p>
