--- a/7gables.html
+++ b/7gables.html
@@ -50,8 +50,8 @@ The Marble Faun (1860)<br>
 Septimius Felton; or, the Elixir of Life (1872)<br>
 Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref3"><a href="#note3">3</a></sup><p>
         
-        <p><b>Material Source</b></p>
-        <p>For the book, I am using the free, public domain ebook from Project Gutenburg. It is an excellent source for 
+        <p><b>Material Source</b><br>
+          For the book, I am using the free, public domain ebook from Project Gutenburg. It is an excellent source for 
           ebooks that have entered the public domain. LibriVox is another great source for public domain audiobooks.<br>
           I am also using Audible for when I am running or doing other tasks that prevent me from reading.
         </p>
