--- a/7gables.html
+++ b/7gables.html
@@ -53,14 +53,14 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref3"><a href="#note3">3</a
         <p><b>Material Source</b><br>
           For the book, I am using the free, public domain ebook from <a href="https://www.gutenberg.org/">Project Gutenburg</a>. It is an excellent source for 
           ebooks that have entered the public domain. <a href="https://librivox.org/">LibriVox</a> is another great source for public domain audiobooks.<br>
-          I am also using Audible for when I am running or doing other tasks that prevent me from reading.
+          I am also using an Audible audiobook narrated by Adam Sims for when I am running or doing other tasks that prevent me from reading.
         </p>
 
         <p>***</p>
         <p><b>Chapter 10</b><br><i>The Pyncheon Garden</i><p>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
         I have had several years experience being around gardens and chickens, so I am very familiar with this kind of setting. 
-        Hawthorne's description of the tiniest details and his ability to draw out the most nestalgic parts were 
+        Hawthorne's description of the tiniest details and his ability to draw out the most nostalgic parts were 
         absolutely incredible. It was like he was able to distill the essence of these experiences and give the reader 
         the joy of this world.<br>For someone who has never experienced these things or has had bad or limited experiences, this 
         is the perfect way to enter the soul of someone who truly finds peace in these things.</p>
