--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       <li><a href="aboutme.html">About Me</a></li>
     </ul>
   </nav>
-
+  
+    background-image: url("images/forest.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  
+  
 
   <main>
     <article>
