--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
   
-    background-image: url("images/forest.jpg");
+    background-image: url("DALLE-android1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
