--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>The Proto Realist</h1>
-    <h2>Welcome to the humble life of a featherless biped</h1>
+    <h2>Musings of a featherless biped</h1>
   </header>
   
   <nav>
