--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>The Proto Realist</h1>
-    <h2>Musings of a featherless biped</h1>
+    <h2>Musings and Machines</h1>
   </header>
   
   <nav>
@@ -22,7 +22,7 @@
 
   <main>
     <article>
-      <p>Salutations</p>
+      <!--<p>Salutations</p>
       <p>For all of us unusual humans out there who care about living 
         a quaint, yet quasi fantastic life, I have decided to begin 
         a blog about my droll interests. They do not stray far from 
@@ -32,7 +32,7 @@
         mine may not be for you. If you tread with care and you keep 
         your expectations low, then we just might survive this
         experiment of existence.
-      </p>
+      </p>-->
     </article>
     <nav>
       <ul>
