--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         experiment of existence.
       </p>-->
     </article>
+  </main>
+
+  <footer>&copy; 2024 The Proto Realist 
+
     <nav>
       <ul>
         <li><a href=books.html>Books</a></li>
@@ -41,9 +45,9 @@
         <li><a href=tech.html>Tech</a></li>
       </ul>
     </nav>
-  </main>
 
-  <footer>&copy; 2024 The Proto Realist</footer>
+
+  </footer>
  
 </body>
 </html>
