--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     <h2>Musings and Machines</h1>
   </header>
   
-  <nav>
-    <ul>
-      <li><a href="aboutme.html">About Me</a></li>
-    </ul>
-  </nav>
+  
 
 
   <main>
@@ -36,8 +32,13 @@
     </article>
   </main>
 
-  <footer>&copy; 2024 The Proto Realist 
-
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="aboutme.html">About Me</a></li>
+      </ul>
+    </nav>
+    
     <nav>
       <ul>
         <li><a href=books.html>Books</a></li>
@@ -45,7 +46,7 @@
         <li><a href=tech.html>Tech</a></li>
       </ul>
     </nav>
-
+    &copy; 2024 The Proto Realist 
 
   </footer>
  
