--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
   <header>
     <h1>The Proto Realist</h1>
-    <h2>Musings and Machines</h1>
+    <h2>The Muse and the Machine</h1>
   </header>
   
+  <div class="background-image">
+    <div class="foreground-image"></div>
+  </div>
   
-
-
   <main>
     <article>
       <!--<p>Salutations</p>
