--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     
     <nav>
       <ul>
-        <li><a href=books.html>Books</a></li>
+        <li><a href=books.html>literature</a></li>
         <li><a href=musings.html>Musings</a></li>
-        <li><a href=tech.html>Tech</a></li>
+        <li><a href=tech.html>Technology</a></li>
       </ul>
     </nav>
     &copy; 2024 The Proto Realist 
