--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
   <header>
     <h1>The Proto Realist</h1>
     <h2>The Muse and the Machine</h1>
-      
-      <nav>
-        <ul>
           <li><a href="aboutme.html">About</a></li>
-        </ul>
-      </nav>
+
       
   </header>
   
@@ -44,7 +40,7 @@
 
     <nav>
       <ul>
-        <li><a href=books.html>literature</a></li>
+        <li><a href=books.html>Literature</a></li>
         <li><a href=musings.html>Insights</a></li>
         <li><a href=tech.html>Technology</a></li>
       </ul>
