--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav>
       <ul>
         <li><a href=books.html>Literature</a></li>
-        <li><a href=musings.html>Insights</a></li>
+        <li><a href=insights.html>Insights</a></li>
         <li><a href=tech.html>Technology</a></li>
       </ul>
     </nav>
