--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <nav>
       <ul>
-        <li><a href=books.html>Literature</a></li>
-        <li><a href=insights.html>Insights</a></li>
-        <li><a href=tech.html>Technology</a></li>
+        <li><a href="books.html">Literature</a></li>
+        <li><a href="insights.html">Insights</a></li>
+        <li><a href="tech.html">Technology</a></li>
       </ul>
     </nav>
     &copy; 2024 The Proto Realist 
