--- a/literature.html
+++ b/literature.html
@@ -1,1 +1,26 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Literature</title>
+        <link rel="stylesheet" href="style-literature.css">
+    </head>
+    <header>
+        <h1>Literature</h1>
+    </header>
+    <body>
+        <main>
+            <article>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
+            </article>
+        </main>
+        <nav>
+            <ul>
+                <li><a href="7gables.html">The House of the Seven Gables</a></li>
+                <li><a href="gatsby.html">The Great Gatsby</a></li>
+            </ul>
+        </nav>
+        <footer>&copy; The Proto Realist</footer>
+    </body>
+</html>
