--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   "width=device-width, initial-scale=1.0">
   <title>The Proto Realist</title>
   <link rel="stylesheet" href="style-home.css">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
