--- a/literature.html
+++ b/literature.html
@@ -22,6 +22,6 @@
                 <li><a href="gatsby.html">The Great Gatsby</a></li>
             </ul>
         </nav>
-        <footer>&copy; The Proto Realist</footer>
+        <footer> class="green"> &copy; The Proto Realist</footer>
     </body>
 </html>
