--- a/literature.html
+++ b/literature.html
@@ -13,7 +13,7 @@
         <img src="DALLE-book2.png" alt="" width="400" height="400">
         <main>
             <article>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
+                <p class="green">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
             </article>
         </main>
         <nav>
@@ -22,6 +22,6 @@
                 <li><a href="gatsby.html">The Great Gatsby</a></li>
             </ul>
         </nav>
-        <footer> class="green"> &copy; The Proto Realist</footer>
+        <footer>&copy; The Proto Realist</footer>
     </body>
 </html>
