--- a/literature.html
+++ b/literature.html
@@ -13,7 +13,7 @@
         <img src="DALLE-book2.png" alt="" width="400" height="400">
         <main>
             <article>
-                <p class="green">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
             </article>
         </main>
         <nav>
