--- a/literature.html
+++ b/literature.html
@@ -10,7 +10,7 @@
         <h1>Literature</h1>
     </header>
     <body>
-        <img src="DALLE-book2.png" alt="" width="400" height="400">
+        <img id="book-garden" src="DALLE-book2.png" alt="" width="400" height="400">
         <main>
             <article>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
