--- a/literature.html
+++ b/literature.html
@@ -18,6 +18,7 @@
         </main>
         <nav>
             <ul>
+                <li><a href="puritans.html">The Puritans</a></li>
                 <li><a href="7gables.html">The House of the Seven Gables</a></li>
                 <li><a href="gatsby.html">The Great Gatsby</a></li>
             </ul>
