--- a/puritans.html
+++ b/puritans.html
@@ -20,8 +20,8 @@
             <p><b>Common Stereotypes</b><br> 
                 I am mostly focused on a broad, 
                 bird's eye view of the movement, so I will 
-                not be spending much time exploring the truth 
-                or exagerations of sterotypes.<br>
+                not be spending much time exploring the truth of 
+                sterotypes.<br>*********************************
                 
                 Some common perceptions of the Puritans are 
                 their roles as the Pilgrims that landed at 
