--- a/puritans.html
+++ b/puritans.html
@@ -12,7 +12,7 @@
         <main>
             <p><b>Intentions</b></p>
             <p>The purpose of these articles, is to give a basic 
-                overview of background information to aid in 
+                background information to aid in 
                 understanding the context of specific events or 
                 characters. It is not intended for an exhaustive 
                 study
@@ -21,16 +21,18 @@
                 I am mostly focused on a broad, 
                 bird's eye view of the movement, so I will 
                 not be spending much time exploring the truth of 
-                sterotypes.<br>*********************************
+                sterotypes.<br>***<br>
                 
-                Some common perceptions of the Puritans are 
-                their roles as the Pilgrims that landed at 
-                Plymouth Rock and as the instigators of the 
-                Salem Witch Trials. They were also very 
-                well known for extremely strict and prudish 
-                morals. In fact, the word Puritanical, 
-                coined in 1598, is a direct reflection of 
-                public opinion of them.  </p>
+                Whether or not people were aware of it or not, 
+                two well known roles of the Puritans in history were 
+                as the Pilgrims that landed at Plymouth Rock and 
+                as the instigators of the Salem Witch Trials. 
+                As far as people's opinion of them, both past and 
+                present, they are known being extremely prudish and 
+                morally strict. In fact, this is where we get the word 
+                Puritanical, which references their strong work ethic 
+                in addtion to their abhorence of pleasure.
+             </p>
         </main>
         <footer>&copy; 2024 The Proto Realist</footer>
     </body>
