--- a/puritans.html
+++ b/puritans.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <p><b>Intentions</b></p>
-            <p>The purpose of these articles, is to give a basic 
+            <p>The purpose of these articles, is to give basic 
                 background information to aid in 
                 understanding the context of specific events or 
                 characters. It is not intended for an exhaustive 
