--- a/puritans.html
+++ b/puritans.html
@@ -14,7 +14,7 @@
             <p>The purpose of these articles, is to give basic 
                 background information to aid in 
                 understanding the context of specific events or 
-                characters. It is not intended for an exhaustive 
+                characters. It is not intended as an exhaustive 
                 study
             </p>
             <p><b>Common Stereotypes</b><br> 
