--- a/puritans.html
+++ b/puritans.html
@@ -31,9 +31,11 @@
                 present, they are known being extremely prudish and 
                 morally strict. In fact, this is where we get the word 
                 Puritanical, which references their strong work ethic 
-                in addtion to their abhorence of pleasure.
+                in addtion to their disdain of pleasure.
              </p>
         </main>
-        <footer>&copy; 2024 The Proto Realist</footer>
+        <footer>&copy; 2024 The Proto Realist<br>
+            https://dictionary.cambridge.org/us/dictionary/english/puritanical
+        </footer>
     </body>
 </html>
