--- a/puritans.html
+++ b/puritans.html
@@ -10,8 +10,8 @@
     </header>
     <body>
         <main>
-            <p><b>Intentions</b></p>
-            <p>The purpose of these articles, is to give basic 
+            <p><b>Intentions</b>
+                The purpose of these articles, is to give basic 
                 background information to aid in 
                 understanding the context of specific events or 
                 characters. It is not intended as an exhaustive 
@@ -21,8 +21,7 @@
                 I am mostly focused on a broad, 
                 bird's eye view of the movement, so I will 
                 not be spending much time exploring the truth of 
-                sterotypes.<br>***<br>
-                
+                sterotypes.<br>
                 Whether or not people were aware of it or not, 
                 two well known roles of the Puritans in history were 
                 as the Pilgrims that landed at Plymouth Rock and 
