--- a/puritans.html
+++ b/puritans.html
@@ -11,11 +11,10 @@
     <body>
         <main>
             <p><b>Intentions</b>
-                The purpose of these articles, is to give basic 
-                background information to aid in 
-                understanding the context of specific events or 
-                characters. It is not intended as an exhaustive 
-                study
+                The purpose of these articles is to give basic 
+                background information to help with the context 
+                of specific events or characters. It is not 
+                meant for an exhaustive study.
             </p>
             <p><b>Common Stereotypes</b><br> 
                 I am mostly focused on a broad, 
