--- a/puritans.html
+++ b/puritans.html
@@ -28,7 +28,7 @@
                 As far as people's opinion of them, both past and 
                 present, they are known being extremely prudish and 
                 morally strict. In fact, this is where we get the word 
-                Puritanical, which references their strong work ethic 
+                Puritanical, which references their work ethic  
                 in addtion to their disdain of pleasure.
              </p>
         </main>
