--- a/puritans.html
+++ b/puritans.html
@@ -20,7 +20,7 @@
                 I am mostly focused on a broad, 
                 bird's eye view of the movement, so I will 
                 not be spending much time exploring the truth of 
-                sterotypes.<br>
+                sterotypes.<br><br>
                 Whether or not people were aware of it or not, 
                 two well known roles of the Puritans in history were 
                 as the Pilgrims that landed at Plymouth Rock and 
