--- a/puritans.html
+++ b/puritans.html
@@ -31,6 +31,12 @@
                 Puritanical, which references their work ethic  
                 in addtion to their disdain of pleasure.
              </p>
+             <p><b>Origins</b><br><br>
+                The Protestant Reformation<br>
+                <ul>1517 - Martin Luther nails his 95 Thesis</ul>
+                <ul>1521 - Ulrich Zwingli</ul>
+                <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
+             </p>
         </main>
         <footer>&copy; 2024 The Proto Realist<br>
             https://dictionary.cambridge.org/us/dictionary/english/puritanical
