--- a/puritans.html
+++ b/puritans.html
@@ -32,7 +32,7 @@
                 in addtion to their disdain of pleasure.
              </p>
              <p><b>Origins</b><br><br>
-                The Protestant Reformation<br>
+                <b>The Protestant Reformation</b><br>
                 <ul>1517 - Martin Luther nails his 95 Thesis</ul>
                 <ul>1521 - Ulrich Zwingli</ul>
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
