--- a/puritans.html
+++ b/puritans.html
@@ -10,7 +10,7 @@
     </header>
     <body>
         <main>
-            <p><b>Intentions</b>
+            <p><b>Intentions</b><br>
                 The purpose of these articles is to give basic 
                 background information to help with the context 
                 of specific events or characters. It is not 
