--- a/puritans.html
+++ b/puritans.html
@@ -26,7 +26,7 @@
                 as the Pilgrims that landed at Plymouth Rock and 
                 as the instigators of the Salem Witch Trials. 
                 As far as people's opinion of them, both past and 
-                present, they are known being extremely prudish and 
+                present, they are known for being extremely prudish and 
                 morally strict. In fact, this is where we get the word 
                 Puritanical, which references their work ethic  
                 in addtion to their disdain of pleasure.
@@ -36,6 +36,9 @@
                 <ul>1517 - Martin Luther nails his 95 Thesis</ul>
                 <ul>1521 - Ulrich Zwingli</ul>
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
+             </p>
+             <p><b>The English Reformation</b><br>
+                <ul>1534 - Henry the 8th passes the Act of Supremacy</ul>
              </p>
         </main>
         <footer>&copy; 2024 The Proto Realist<br>
