--- a/puritans.html
+++ b/puritans.html
@@ -31,7 +31,7 @@
                 Puritanical, which references their work ethic  
                 in addtion to their disdain of pleasure.
              </p>
-             <p><h3>Origins</h3><br><br>
+             <p><h2>Origins</h2><br>
                 <b>The Protestant Reformation</b><br>
                 <ul>1517 - Martin Luther nails his 95 Thesis</ul>
                 <ul>1521 - Ulrich Zwingli</ul>
