--- a/puritans.html
+++ b/puritans.html
@@ -39,6 +39,7 @@
              </p>
              <p><b>The English Reformation</b><br>
                 <ul>1534 - Henry the 8th passes the Act of Supremacy</ul>
+                <ul>15??'s - The Puritans form</ul>
              </p>
         </main>
         <footer>&copy; 2024 The Proto Realist<br>
