--- a/puritans.html
+++ b/puritans.html
@@ -21,7 +21,7 @@
                 bird's eye view of the movement, so I will 
                 not be spending much time exploring the truth of 
                 sterotypes.<br><br>
-                Whether or not people were aware of it or not, 
+                Whether or not people were aware of the players, 
                 two well known roles of the Puritans in history were 
                 as the Pilgrims that landed at Plymouth Rock and 
                 as the instigators of the Salem Witch Trials. 
