--- a/puritans.html
+++ b/puritans.html
@@ -26,7 +26,7 @@
                 as the Pilgrims that landed at Plymouth Rock and 
                 as the instigators of the Salem Witch Trials. 
                 As far as people's opinion of them, both past and 
-                present, they are known for being extremely prudish and 
+                present, they were known for being extremely prudish and 
                 morally strict. In fact, this is where we get the word 
                 Puritanical, which references their work ethic  
                 in addtion to their disdain of pleasure.
