--- a/puritans.html
+++ b/puritans.html
@@ -41,6 +41,12 @@
                 <ul>1534 - Henry the 8th passes the Act of Supremacy</ul>
                 <ul>15??'s - The Puritans form</ul>
              </p>
+             <p><h2>The New World</h2><br>
+                <ul>year - Plymout Rock</ul>
+                <ul>year - Thanksgiving</ul>
+
+            
+             </p>
         </main>
         <footer>&copy; 2024 The Proto Realist<br>
             https://dictionary.cambridge.org/us/dictionary/english/puritanical
